bcs-services/cluster-resources/pkg/resource/example/manifest/network/simple_endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: endpoints-test
  namespace: default
subsets:
  - addresses:
    - ip: 1.0.0.1
    ports:
    - port: 8080
      protocol: TCP
