bcs-services/cluster-resources/pkg/resource/example/manifest/network/simple_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-test
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
